<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/register_background"
    tools:context=".registerActivity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:background="@color/yellow">
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="-5dp"
        app:srcCompat="@drawable/ic_wave"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/register_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/registerinput"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/register_userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/registerinput"
        android:ems="10"
        android:inputType="none|textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@drawable/register_button"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>


</LinearLayout>